--- a/superuser_admin/templates/superuser_admin/admin.html
+++ b/superuser_admin/templates/superuser_admin/admin.html
@@ -1,36 +1,40 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Superuser Admin</h1>
+    <h1>Superuser Admin</h1>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 col-md-12 col-lg-3">
-            <h4>Product List</h4>
-            {% for product in products %}
-            <a href=""><p>{{ product.name }}</p></a>
-            {% endfor %}
-        </div>
-        <div class="col-12 col-md-6 col-lg-3">
-            <h4>Your Blog Posts</h4>
-            {% for post in blog_posts %}
-            <p>{{ post.title }} <a href="{% url 'manage_post' post_pk=post.pk %}">View/manage post</a></p>
-            {% endfor %}
-            <a href="{% url 'add_post' %}">Add a new blog post</a>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3">
-            <h4>All Orders</h4>
-            {% for order in orders %}
-            <a href=""><p>{{ order.order_number }}</p></a>
-            {% endfor %}
-        </div>
-        <div class="col-12 col-md-6 col-lg-3">
-            <h4>All Enquiries</h4>
-            {% for enquiry in enquiries %}
-            <a href="">{{ enquiry.pk }}: {{ enquiry.subject }}</a>
-            {% endfor %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-3">
+                <h4>Product List</h4>
+                {% for product in products %}
+                    <a aria-label="View product in full" href="{% url 'product_detail' sku=product.sku %}">
+                        <p>{{ product.name }}</p>
+                    </a>
+                {% endfor %}
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h4>Your Blog Posts</h4>
+                {% for post in blog_posts %}
+                    <p>
+                        {{ post.title }} <a aria-label="Post management" href="{% url 'manage_post' post_pk=post.pk %}">View/manage post</a>
+                    </p>
+                {% endfor %}
+                <a aria-label="Add blog post" href="{% url 'add_post' %}">Add a new blog post</a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h4>All Orders</h4>
+                {% for order in orders %}
+                    <a aria-label="View order" href="">
+                        <p>{{ order.order_number }}</p>
+                    </a>
+                {% endfor %}
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h4>All Enquiries</h4>
+                {% for enquiry in enquiries %}<a href="">{{ enquiry.pk }}: {{ enquiry.subject }}</a>{% endfor %}
+            </div>
         </div>
     </div>
-</div>
 
 {% endblock content %}
