--- a/superuser_admin/templates/superuser_admin/add_post.html
+++ b/superuser_admin/templates/superuser_admin/add_post.html
@@ -4,7 +4,7 @@
 <h1>Manage {{ post.title }}</h1>
 
 <div class="col-12 col-md-10 col-lg-6 mx-auto">
-    <form action="{% url 'add_post' %}" method="post">
+    <form aria-label="Add blog post" action="{% url 'add_post' %}" method="post">
         {% csrf_token %}
         {{ form|crispy }}
         <div class="text-right">
