--- a/profiles/templates/profiles/view_order.html
+++ b/profiles/templates/profiles/view_order.html
@@ -43,7 +43,11 @@
                 <img src="{{ item.product.picture.url }}" alt="{{ item.product.name }}" width="100px" height="auto">
             {% endfor %}
         </div>
-        <a href="{% url 'profile' %}" aria-label="Go back to your profile">Go Back</a>
+        {% if not from_superuser %}
+            <a href="{% url 'profile' %}" aria-label="Go back to your profile">Go Back</a>
+        {% else %}
+            <a href="{% url 'superuser_admin_page' %}" aria-label="Go back to superuser admin">Back to admin</a>
+        {% endif %}
     </div>
 </div>
 {% endblock content %}
