--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width,.float: none;margin-left:0;margin-right:0;text-align:center;align-self: flex-start, initial-scale=1.0" />
         <meta name="description"
               content="I travel the world looking for the best teas to sell from my shop based in Leeds. Although based there I ship worldwide! I also built this website to be a great place to find out more about loose leaf teas so there should be plenty for you to click on if you want to learn about it!">
         <meta name="keywords"
@@ -32,59 +32,70 @@
     </head>
     <body>
         <header>
-            <nav class="navbar">
-                <div class="container-fluid">
-                    <ul class="list-inline mx-auto">
-                        <li class="d-sm-none d-lg-inline-block list-inline-item">
-                            <a aria-label="Go to home page" href="{% url 'welcome' %}">
-                                <p>Ally P's Luxury Teas</p>
-                            </a>
-                        </li>
-                        <li class="list-inline-item d-lg-none">
-                            <a aria-label="Go to home page" href="{% url 'welcome' %}">
-                                <p>Home</p>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a aria-label="Go to shop" href="{% url 'shop' %}">Shop</a>
-                        </li>
-                        <li class="list-inline-item d-none d-lg-inline-block">
-                            <a aria-label="Go to blog page" href="{% url 'blog' %}">The Brews Reviews!</a>
-                        </li>
-                        <li class="list-inline-item d-lg-none">
-                            <a aria-label="Go to blog page" href="{% url 'blog' %}">Blog</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a aria-label="Go to about us page" href="{% url 'about_us' %}">About Us</a>
-                        </li>
-
-                        {% if request.user.is_authenticated %}
-                            <li class="list-inline-item dropdown">
-                                <a class="nav-link dropdown-toggle"
-                                   href="#"
-                                   id="accountDropdown"
-                                   role="button"
-                                   data-toggle="dropdown"
-                                   aria-expanded="false">Account</a>
-                                <div class="dropdown-menu dropdown-menu-right"
-                                     aria-labelledby="accountDropdown">
-                                    <a class="dropdown-item" href="{% url 'profile' %}">View Profile</a>
-                                    <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
-                                </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                    <div class="navbar-collapse justify-content-center" id="navbarNav">
+                        <ul class="navbar-nav text-center">
+                            <li class="nav-item d-sm-none d-lg-inline-block">
+                                <a class="nav-link" aria-label="Go to home page" href="{% url 'welcome' %}">
+                                    Ally P's Luxury Teas
+                                </a>
                             </li>
-                        {% else %}
-                            <li class="list-inline-item">
-                                <a aria-label="Account signup page" href="{% url 'account_signup' %}">Sign-in/Register</a>
+                            <li class="nav-item d-lg-none">
+                                <a class="nav-link" aria-label="Go to home page" href="{% url 'welcome' %}">
+                                    Home
+                                </a>
                             </li>
-                        {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link" aria-label="Go to shop" href="{% url 'shop' %}">Shop</a>
+                            </li>
+                            <li class="nav-item d-none d-lg-inline-block">
+                                <a class="nav-link" aria-label="Go to blog page" href="{% url 'blog' %}">The Brews Reviews!</a>
+                            </li>
+                            <li class="nav-item d-lg-none">
+                                <a class="nav-link" aria-label="Go to blog page" href="{% url 'blog' %}">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-label="Go to about us page" href="{% url 'about_us' %}">About Us</a>
+                            </li>
 
-                    <li class="list-inline-item">
-                        <a aria-label="View your bag" href="{% url 'view_bag' %}"><i class="fas fa-shopping-bag fa-lg"></i></a>
-                    </li>
-                </ul>
+                            {% if request.user.is_authenticated %}
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle"
+                                       href="#"
+                                       id="accountDropdown"
+                                       role="button"
+                                       data-toggle="dropdown"
+                                       aria-expanded="false">Account</a>
+                                    <div class="dropdown-menu dropdown-menu-right"
+                                         aria-labelledby="accountDropdown">
+                                        <a class="dropdown-item" href="{% url 'profile' %}">View Profile</a>
+                                        <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                                    </div>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-label="Account signup page" href="{% url 'account_signup' %}">Sign-in/Register</a>
+                                </li>
+                            {% endif %}
+
+                            <li class="nav-item">
+                                <a class="nav-link" aria-label="View your bag" href="{% url 'view_bag' %}"><i class="fas fa-shopping-bag fa-lg"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            {% if request.user.is_superuser %}
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <h3><a href="{% url 'superuser_admin_page' %}">Go To Superuser Admin Page</a></h3>
+                    </div>
+                </div>
             </div>
-        </nav>
-    </header>
+            {% endif %}
+        </header>
 
     {% if messages %}
         <div class="message-container">
@@ -108,6 +119,11 @@
         {% block content %}
         {% endblock content %}
     </main>
+    <footer class="text-center mt-3">
+        <h4>Contact:</h4>
+        <p><a aria-label="Go to about page" href="#" rel="noopener"><span class="fab fa-facebook-f" aria-hidden="true"></span>Find us on Facebook!</p></a>
+        <p>Or go to our <a href="{% url 'about_us' %}">About Us</a> page to fill out the enquiry form!</p>
+    </footer>
     <!-- Scripts: -->
     <!-- J-Query -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
