--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,10 +11,19 @@ h1 {
     font-weight: 600;
 }
 
-
 /* Google font-delius */
 .delius-regular {
     font-family: "Delius", cursive;
     font-weight: 400;
     font-style: normal;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
