--- a/superuser_admin/templates/superuser_admin/manage_post.html
+++ b/superuser_admin/templates/superuser_admin/manage_post.html
@@ -15,37 +15,41 @@
             <button>
                 <a href="{% url 'superuser_admin_page' %}">Back to Admin Page</a>
             </button>
-                <button type="button"
-            class="btn btn-danger"
-            data-toggle="modal"
-            data-target="#deletePostModal">Delete Post</button>
+            <button type="button"
+                    class="btn btn-danger"
+                    data-toggle="modal"
+                    data-target="#deletePostModal">Delete Post</button>
         </form>
     </div>
 
     <div class="modal fade"
-         id="deletePostModal"
-         tabindex="-1"
-         aria-labelledby="deletePostModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-danger" id="deletePostModalLabel">Are you sure you want to delete post?</h5>
-                    <button type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <form action="{% url 'delete_post' post_pk=post.pk %}"
-                          method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
-                </div>
+     id="deletePostModal"
+     tabindex="-1"
+     role="dialog"
+     aria-labelledby="deletePostModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-danger" id="deletePostModalLabel">
+                    Are you sure you want to delete this post?
+                </h5>
+                <button type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-label="Close">
+                    <span aria-hidden="true">x</span>
+                </button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <form action="{% url 'delete_post' post_pk=post.pk %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
             </div>
         </div>
     </div>
+</div>
 
 {% endblock content %}
