--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <body>
         <header>
             <!-- Header contents -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
                 <div class="container">
                     <a class="navbar-brand" href="{% url 'welcome' %}">Ally P's Luxury Teas</a>
 
@@ -83,9 +83,7 @@
 
                             {% if bag_items %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'view_bag' %}">
-                                        View Bag
-                                    </a>
+                                    <a class="nav-link" href="{% url 'view_bag' %}">View Bag</a>
                                 </li>
                             {% endif %}
                         </ul>
@@ -128,16 +126,27 @@
             {% endblock content %}
         </main>
         <footer class="text-center mt-3">
-            <h4>Contact:</h4>
-            <p>
-                <a aria-label="Link to Facebook"
-                   href="https://facebook.com"
-                   rel="noopener"
-                   target="_blank"><span class="fab fa-facebook-f" aria-hidden="true"></span>Find us on Facebook!</a>
-            </p>
-            <p>
-                Or go to our <a aria-label="Go to about page" href="{% url 'about_us' %}">About Us</a> page to fill out the enquiry form!
-            </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 mx-auto">
+                        <h4>Contact:</h4>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p>
+                            <a aria-label="Link to Facebook"
+                               href="https://facebook.com"
+                               rel="noopener"
+                               target="_blank"><span class="fab fa-facebook-f" aria-hidden="true"></span>Find us on Facebook!</a>
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p>
+                            Or go to our <a aria-label="Go to about page" href="{% url 'about_us' %}">About Us</a> page to fill out the enquiry form!
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </footer>
         <!-- Scripts: -->
         <!-- J-Query -->
