--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -4,7 +4,10 @@
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark">
         <strong class="mr-auto">Success!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+        <button type="button"
+                class="ml-2 mb-1 close text-dark"
+                data-dismiss="toast"
+                aria-label="Close">
             <span aria-hidden="true">x</span>
         </button>
     </div>
@@ -21,28 +24,44 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            <img width="100%" height="auto" src="{{ item.product.picture.url }}" alt="{{ item.product.name }}">
+                            {% if "placeholder" in item.product.picture.url %}
+                                <img width="100%"
+                                     height="auto"
+                                     src="{% static 'images/camellia-sinensis.jpg' %}"
+                                     alt="Camellia sinensis plant">
+                            {% else %}
+                                <img width="100%"
+                                     height="auto"
+                                     src="{{ item.product.picture.url }}"
+                                     alt="{{ item.product.name }}">
+                            {% endif %}
                         </div>
                         <div class="col-9">
-                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                            <p class="my-0">
+                                <strong>{{ item.product.name }}</strong>
+                            </p>
                             <p class="my-0 small">Weight: {{ item.weight }}</p>
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
-                            <p class="my-0"><strong>£{{ item.price }}</strong></p>
+                            <p class="my-0">
+                                <strong>£{{ item.price }}</strong>
+                            </p>
                         </div>
                     </div>
                 {% endfor %}
             </div>
             <div class="row">
                 <div class="col">
-                    <strong><p class="mt-3 mb-1 text-black">
-                        Total:
-                        <span class="float-right">£{{ total|floatformat:2 }}</span>
-                    </p></strong>
+                    <strong>
+                        <p class="mt-3 mb-1 text-black">
+                            Total:
+                            <span class="float-right">£{{ total|floatformat:2 }}</span>
+                        </p>
+                    </strong>
                     <p>Delivery and total calculated at checkout!</p>
                     <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
-                        <span class="text-uppercase">Go To Secure Checkout</span>
+                        <span class="text-uppercase">View Bag in Full</span>
                         <span class="icon">
-                            <i class="fas fa-lock"></i>
+                            <i class="fas fa-shopping-bag"></i>
                         </span>
                     </a>
                 </div>
