--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,13 @@
                     </div>
                 </div>
             </nav>
+            <div class="container-fluid welcome-delivery-banner mt-0 mb-2">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h3>We Deliver Worldwide!</h3>
+                    </div>
+                </div>
+            </div>
 
             {% if request.user.is_superuser %}
                 <div class="container">
